# drl_part2

./: .gitignore  Makefile  compose.yml  label_list.txt  metrics.py  pyproject.toml  re_01_dqn_cic.pth
01_process/: .tf_gan.ipynb  001_dataset.ipynb  001_dataset.py  001_dataset_dask.ipynb  002_binary_dataset.ipynb  002_repair_dataset.py  003_1_scaled.py  003_full_dataset.py  004_1_after_gan.py  004_gan.ipynb  004_gan.py  005_scale_over_1.py  006_no_attempt.py
02_run/01_binary/attempt_1/: drl.ipynb  drl.py  re_01_dqn_cic.pth
02_run/02_multiple/attempt_1/: multi.py
99_test/: 01_test.ipynb  02_min_max.py  02_test.ipynb  03_test.py  util.py
docker/: Dockerfile
result/gan/: label_list.txt
result/multi/: metrics_history.pkl  test.csv  test_metrics_classes.csv  test_metrics_summary.txt
