[project]
name = "drl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dask[dataframe]>=2024.8.0",
    "flow-package",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "pytorch-msssim>=1.0.0",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.6.0",
    "torch>=2.6.0",
    "torchrl>=0.7.2",
    "tqdm>=4.67.1",
]


[tool.uv.sources]
flow-package = { git = "https://github.com/Perpetuactivity/flow_package", branch = "gym_version" }
